--- a/deck.mdx
+++ b/deck.mdx
@@ -20,6 +20,9 @@ import Counter from './components/counter'
 
 # mdx-deckとcode-suferでスライドを作ろう！
 
+###### このスライドのソースは[コチラ](https://github.com/Takumon/mdx-deck-sample)
+
+
 ---
 
 # [mdx-deck](https://github.com/jxnblk/mdx-deck)は[mdx](https://github.com/mdx-js/mdx)を使ったスライド作成ライブラリです
@@ -206,3 +209,5 @@ code-surferはmdx-deckで使えるReactコンポーネントです。<br />
 />
 ---
 # :tomato:おしまい:tomato:
+
+###### このスライドのソースは[コチラ](https://github.com/Takumon/mdx-deck-sample)
