--- a/deck.mdx
+++ b/deck.mdx
@@ -1,10 +1,18 @@
-export { default as theme } from './theme'
-import { Appear, Head, Notes, } from 'mdx-deck'
+export { default as theme } from './components/theme'
+import { Appear, Head, Notes, Image} from 'mdx-deck'
 import { Invert, Split, FullScreenCode, Horizontal} from 'mdx-deck/layouts'
 import { CodeSurfer } from 'mdx-deck-code-surfer'
 import nightOwl from 'prism-react-renderer/themes/nightOwl'
 import Box from 'superbox'
-import Counter from './components/counter'
+import styled from 'styled-components'
+import {
+  BGImage,
+  Counter,
+  LayoutMarkdown,
+  LayoutAlignCenter,
+  IFRAME,
+  Sm,
+} from './components'
 
 
 <Head>
@@ -12,70 +20,143 @@ import Counter from './components/counter'
   <meta name='twitter:card' content='summary_large_image' />
   <meta name='twitter:site' content='@inouetakumon' />
   <meta name='twitter:title' content='mdx-deckとcode-suferでスライドを作ろう！' />
-  <meta name='twitter:description' content='mdxファイルを作るだけでプレゼンテーション可能なmdx-deckの紹介と、そのプラグインであるcode-suferを使ったリッチなソースコードプレビューを紹介します' />
-  <meta name='twitter:image' content='card.png' />
+  <meta name='twitter:description' content='mdx-deckとcode-suferはMDXをベースとしたグラフィカルなスライドが作れるライブラリです。' />
+  <meta name='twitter:image' content='./images/mdx-deck-background.png' />
 </Head>
 
 
+<h1>
+  <span>MDX-DECK</span><Sm>と</Sm><span>Code Sufer</span><Sm>で</Sm><br/>
+  <span>スライドを作ろう！</span>
+</h1>
 
-# mdx-deckとcode-suferでスライドを作ろう！
+<hr/>
+
+###### [@inouetakumon](https://twitter.com/inouetakumon):tomato:
 
 ###### このスライドのソースは[コチラ](https://github.com/Takumon/mdx-deck-sample)
 
+<hr/>
 
 ---
 
-# [mdx-deck](https://github.com/jxnblk/mdx-deck)は[mdx](https://github.com/mdx-js/mdx)を使ったスライド作成ライブラリです
+### 自己紹介
+<hr/>
+
+<img src="./images/avater.jpg" alt="たくもんのアイコン" style={{borderRadius: '50%', margin: '12px 42px -24px 0' }} />
+
+* 名前：たくもん（[@inouetakumon](https://twitter.com/inouetakumon)）
+* 仕事：SIer
+* 言語：Java、JavaScript
+* 趣味：ブログ（[https://takumon.com](https://takumon.com)）
+
+---
+export default LayoutAlignCenter
+
+<IFRAME src={'https://takumon.com'} ></IFRAME>
+
 
 ---
 
-### mdxファイル１つ作ればmdx-deckコマンドでスライドが見れます
+export default LayoutAlignCenter
 
-* `npm init`
-* `npm i -D mdx-deck`
-* `echo -e "#Title\\ndescription\\n---\\n#Next" page > deck.mdx`
-* package.jsonのスクリプトに`start: mdx-deck deck.mdx`追記
-* `npm start` :arrow_right: `http://127.0.0.1`にアクセス
+<BGImage  opacity={0.6} src={require("file-loader!./images/sample-background.jpg")}/>
+
+
+# MDX-DECK
+#### でスライドを作ろう！！
 
 ---
+export default Split
+
+![images/mdx-deck-logo.png](./images/mdx-deck-logo.png)
+
+### [MDX](https://github.com/mdx-js/mdx)ベースのスライド作成ライブラリ
+
+<hr/>
+
+* MDXはマークダウンにReactコンポーネントが書けるようにしたもの（Markdown + JSX）
+* 設定ファイルなしでMDXファイルだけでスライドが作れる
+* Reactコンポーネントでリッチなスライドが作れる
+
+
+---
+
+export default LayoutMarkdown
+
+## [MDX](https://github.com/mdx-js/mdx)ファイル１つ作ればスライドが完成
+
+<hr/>
+
+1. npm i -D mdx-deck
+1. MDXファイル作成
+1. package.jsonに起動スクリプト追加
+1. npm start
+1. `http://127.0.0.1:8080` にアクセス！
+
+---
+export default LayoutAlignCenter
 
 
 <CodeSurfer
-  title='MDXファイルの中身'
+  title={() => (<h2>サンプル<span style={{color: '#f46f55'}}>.mdx</span></h2>)}
   lang='markdown'
   theme={nightOwl}
-  dark={true}
+  dark={false}
   code={require('!raw-loader!./snippets/sample-slide.mdx')}
   steps={[
     { notes: ''},
-    { notes: 'ファイルの拡張子はmdxです'},
-    { lines: [1, 5, 7, 9, 10, 11], notes: '通常のマークダウン記法を使えます' },
-    { range: [17, 23], notes: 'Reactコンポーネントも埋め込むことができます' },
-    { lines: [3, 13, 24], notes: '---でスライドの改ページができます' },
+    { notes: () =>  (<h3>ファイルの拡張子は<span style={{color: '#f46f55'}}>.mdx</span></h3>)},
+    { range: [5, 9], notes: () =>  (<h3>マークダウン記法が使える</h3>) },
+    { range: [15, 23], notes: () =>  (<h3>Reactコンポーネントも使える</h3>) },
+    { lines: [3, 11, 23], notes: () => (<h3><span style={{color: '#f46f55'}}>---</span>で改ページ</h3>) },
     { notes: ''},
   ]}  
 />
 
+
+
 ---
 
-### `Headタグ`：スライドにメタ情報を埋め込む
+export default LayoutAlignCenter
+
+<BGImage  opacity={1} src={require("file-loader!./images/themes.png")}/>
+
+---
+
+export default LayoutAlignCenter
+
+<BGImage  opacity={0.3} src={require("file-loader!./images/themes.png")}/>
+
+
+# 豊富なテーマ
+
 
 ```jsx
-import { Head } from 'mdx-deck'
-<Head>
-  <title>mdx-deckとcode-suferでスライドを作ろう！</title>
-  <meta name='twitter:card' content='summary_large_image' />
-  <meta name='twitter:site' content='@inouetakumon' />
-  <meta name='twitter:title' content='mdx-deckとcode-suferでスライドを作ろう！' />
-  <meta name='twitter:description' content='mdx-deckとcode-suferでスライドを作ろう！' />
-  <meta name='twitter:image' content='card.png' />
-</Head>
+export { dark as theme } from 'mdx-deck/themes'
 ```
 
+###### 参考：https://github.com/jxnblk/mdx-deck/blob/master/docs/themes.md
+
+
+---
+export default LayoutMarkdown
+
+## スライド用のコンポーネント
+<hr/>
+
+1. 画像の全画面表示
+1. 左右分割レイアウト
+1. 横並びレイアウト
+1. 色反転レイアウト
+1. ソースコードの全画面表示
+1. アニメーション
+1. メタ情報埋め込み
 ---
 
-### `Imageタグ`：スライドに画像をフルスクリーンで読み込む
+export default LayoutAlignCenter
 
+## `Image`：画像の全画面表示 
 
 ```jsx
 import { Image } from 'mdx-deck'
@@ -83,68 +164,31 @@ import { Image } from 'mdx-deck'
 ```
 
 #### プレビューは次ページ:arrow_right:
----
 
-import { Image } from 'mdx-deck'
+
+---
 
 <Image src='./images/sample-background.jpg' size='cover'/>
 
+
 ---
 
-### `Appearタグ`：一行ごとに表示する
+export default LayoutAlignCenter
+
+## `Split`：左右分割レイアウト
 
 ```jsx
-import { Appear } from 'mdx-deck'
-<ul>
-  <Appear>
-    <li>ほっぷ</li>
-    <li>すてっぷ</li>
-    <li>じゃんぷ</li>
-  </Appear>
-</ul>
+import { Split } from 'mdx-deck/layouts'
+export default Split
+
+![images/sample-background.jpg](./images/sample-background.jpg)
+
+
+## スプリットレイアウト
+ほげほげふがふがぴよぴよ
 ```
 
 #### プレビューは次ページ:arrow_right:
----
-
-### `Appearタグ`プレビュー 
-
-<ul>
-  <Appear>
-    <li>ほっぷ</li>
-    <li>すてっぷ</li>
-    <li>じゃんぷ</li>
-  </Appear>
-</ul>
-
----
-
-
-### `Notesタグ`：プレゼンモードで発表者にだけ見えるコメント 
-
-```jsx
-import { Notes } from 'mdx-deck'
-# スライドタイトル
-<Notes>
-Notesコンポーネントを使って発表者コメントを記述することもできます。
-</Notes>
-
-#### プレビューは次ページ:arrow_right:
----
-
-![note-preview.png](./images/note-preview.png)
-
----
-
-### Reactコンポーネントも埋め込むことができます
-
-##### `+`   と   `-`   をクリックしてみましょう
-<div style={{
-  display: 'flex',
-  alignItems: 'center'
-}}>
-<Counter/>
-</div>
 
 ---
 export default Split
@@ -153,6 +197,33 @@ export default Split
 
 ## スプリットレイアウト
 
+ほげほげふがふがぴよぴよ
+
+
+
+
+
+---
+
+export default LayoutAlignCenter
+
+## `Split`：横並びレイアウト
+
+```jsx
+import { Horizontal} from 'mdx-deck/layouts'
+export default Horizontal
+
+![images/sample-background.jpg](./images/sample-background.jpg)
+
+![images/note-preview.png](./images/note-preview.png)
+
+### どんどん横に並んでいく
+
+```
+
+#### プレビューは次ページ:arrow_right:
+
+
 ---
 export default Horizontal
 
@@ -160,30 +231,193 @@ export default Horizontal
 
 ![images/note-preview.png](./images/note-preview.png)
 
-### ホリゾンタルレイアウト
+## どんどん横に並んでいく
+
+
+
+
+---
+
+export default LayoutAlignCenter
+
+## `Invert`：色反転レイアウト
+
+```jsx
+import { Invert} from 'mdx-deck/layouts'
+export default Invert
+
+## 色反転レイアウト
+```
+
+#### プレビューは次ページ:arrow_right:
 
 ---
 export default Invert
 
-# 色反転レイアウト
+## 色反転レイアウト
+
+
+
+
+
+
+
+
+
+
+
+---
+
+## `FullScreenCode`：ソースコードの全画面表示
+
+````jsx
+import { FullScreenCode } from 'mdx-deck/layouts'
+export default FullScreenCode
+
+
+```jsx
+import Box from 'superbox'
+
+<Box
+  fontSize={80} px={3} py={4}
+  color='white' bg='pink'>
+  superbox
+</Box>
+```
+````
+
+#### プレビューは次ページ:arrow_right:
 
 ---
 export default FullScreenCode
 
 ```jsx
-<Button>
-  ソースコードをフルスクリーン表示
-</Button>
+import Box from 'superbox'
+
+<Box
+  fontSize={80} px={3} py={4}
+  color='white' bg='pink'>
+  superbox
+</Box>
 ```
+
+
+
+
+
 ---
-## Code Surferで色々できます
 
-# <🏄/>
+## `Appear`：アニメーション
 
-code-surferはmdx-deckで使えるReactコンポーネントです。<br />
-ソースコードプレビューをリッチにしてくれます。<br />
+```jsx
+import { Appear } from 'mdx-deck'
 
-###### 参考：https://github.com/pomber/code-surfer
+### `Appear`
+
+<ul>
+  <Appear>
+    <li>ほっぷ🐣</li>
+    <li>すてっぷ🐤</li>
+    <li>じゃんぷ🐓</li>
+  </Appear>
+</ul>
+```
+
+#### プレビューは次ページ:arrow_right:
+---
+
+## `Appear`
+
+<ul>
+  <Appear>
+    <li>ほっぷ🐣</li>
+    <li>すてっぷ🐤</li>
+    <li>じゃんぷ🐓</li>
+  </Appear>
+</ul>
+
+
+
+---
+
+## `Headタグ`：メタ情報埋め込み
+
+```jsx
+import { Head } from 'mdx-deck'
+<Head>
+  <title>mdx-deckとcode-suferでスライドを作ろう！</title>
+  <meta name='twitter:card' content='summary_large_image' />
+  <meta name='twitter:site' content='@inouetakumon' />
+  <meta name='twitter:title' content='mdx-deckとcode-suferでスライドを作ろう！' />
+  <meta name='twitter:description' content='mdx-deckとcode-suferは...' />
+  <meta name='twitter:image' content='card.png' />
+</Head>
+```
+
+#### プレビューは次ページ:arrow_right:
+
+---
+
+// TODO Twitter Card画像貼り付け
+
+---
+export default LayoutMarkdown
+
+## プレゼンテーション機能
+<hr/>
+
+* 💁🏻‍♂️ プレゼンモード `Option + P`
+* 📓 オーバービューモード `Option + O`
+* 📚 全ページ表示モード `Option + G`
+
+
+<Appear>
+  <h2 >実際にお見せします💁🏻‍♂️</h2>
+</Appear>
+
+```notes
+スライドには表示されませんが、発表者にだけ見えるノートです。
+発表時の話の要点をここに書いたりしてチラ見できます。
+```
+
+
+---
+
+## 自作Reactコンポーネントも埋め込める
+
+スライドでよく使う部品をコンポーネント化して再利用できる
+
+<Counter />
+
+
+
+
+
+
+---
+
+export default LayoutAlignCenter
+
+<BGImage  opacity={0.6} src={require("file-loader!./images/sample-background.jpg")}/>
+
+
+# MDX-DECK + CODE-SURFER
+#### でスライドを作ろう！！
+---
+
+export default Split
+
+
+![images/code-surfer-logo.png](./images/code-surfer-logo.png)
+
+## MDX-DECKのプラグイン🏄
+
+<hr/>
+
+* ソースコードプレビューをリッチにしてくれる
+* 大量のコードでも、説明したい箇所をズームできる
+* アニメーションを指定でき、アニメーションごとに説明文を設けられる
+* 参考：https://github.com/pomber/code-surfer
 
 
 ---
@@ -196,18 +430,79 @@ code-surferはmdx-deckで使えるReactコンポーネントです。<br />
   dark={true}
   steps={[
     { notes: ''},
-    { lines: [13], notes: '1. linesで行をハイライト＆ズームできます。' },
-    { lines: [15], notes: '2. rangeで範囲指定も可能です。' },
-    { range: [5, 10], notes: 'こんな感じ😀' },
-    { lines: [17], notes: '3. tokensで単語文字に絞ることも可能です。' },
-    { tokens: {17: [18] }, notes: 'こんな感じ😁' },
-    { lines: [6], notes: '4. row-loaderと併用して他ファイルからコードを読み込んだり ...' },
-    { lines: [7], notes: '5. 行番号を振ったり ...' },
-    { lines: [8], notes: '8. テーマ指定も可能です！　参考：https://code-surfer.netlify.com/theming' },
+    { lines: [13], notes: ()=>(<h2>1. linesで行をハイライト＆ズームできます。</h2>)},
+    { lines: [15], notes: ()=>(<h2>2. rangeで範囲指定も可能です。</h2>) },
+    { range: [5, 10], notes: ()=>(<h2>こんな感じ😀</h2>) },
+    { lines: [17], notes: ()=>(<h2>3. tokensで単語文字に絞ることも可能です。</h2>) },
+    { tokens: {17: [18] }, notes: ()=>(<h2>こんな感じ😁</h2>) },
+    { lines: [6], notes: ()=>(<h2>4. row-loaderと併用して他ファイルからコードを読み込んだり ...</h2>) },
+    { lines: [7], notes: ()=>(<h2>5. 行番号を振ったり ...</h2>) },
+    { lines: [8], notes: ()=>(<h2>8. テーマ指定も可能です！　参考：https://code-surfer.netlify.com/theming</h2>) },
     { notes: ''},
   ]}
 />
+
+
+---
+
+export default LayoutAlignCenter
+
+
+### [mdx-deck-live-code 🤯](https://github.com/JReinhold/mdx-deck-live-code)
+
+<small>Reactコンポーネントのライブコーディングができるプラグイン</small>
+
+<iframe 
+  style={{
+    width: '90vw',
+    height: '75vh',
+    background: 'white',
+  }}
+  src={'https://mdx-deck-live-code.netlify.com/#10'}
+  ></iframe>
+
+
+---
+
+export default LayoutMarkdown
+
+## 使ってみた感想
+<hr/>
+
+### ✨ Good !!
+* 簡単なスライドはMDXファイル１つで作れる
+* 良く使うデザインはReactコンポーネントとして共通化できる
+* 全資産をNode.jsで管理できるの
+
+### 🤔 Uhnnn...
+* 凝ったデザインにするにはテーマの調整（CSS）が必要
+* 最終的にReactでスライド作ってるみたいになった...
+
+---
+
+export default LayoutMarkdown
+
+## 👨‍👩‍👦‍👦  まとめ
+<hr/>
+<br/>
+
+### 📓 MDX-DECK
+* MDXファイルを作るだけで簡単にスライドが作成できる
+* プレゼンテーション機能が一通りそろっている
+* Reactコンポーネントの恩恵を受けられる
+
+### 🏄 CODE-SURFER
+* MDX-DECKのプラグイン
+* ソースコードプレブーをリッチにしてくれる
+
+<Appear>
+<h1>MDX-DECKとCode Suferでスライドを作ろう！</h1>
+</Appear>
+
 ---
 # :tomato:おしまい:tomato:
 
+##### 🙇 ご清聴ありがとうございました 🙇
 ###### このスライドのソースは[コチラ](https://github.com/Takumon/mdx-deck-sample)
+
+
