--- a/snippets/sample-slide.mdx
+++ b/snippets/sample-slide.mdx
@@ -1,10 +1,8 @@
-# mdx-deckサンプル
+# MDX-DECKサンプル
 
 ---
 
-# このスライドは
-
-## mdx-deckのサンプルです
+# マークダウン記法が使える
 
 * リストアイテム1
 * リストアイテム2
@@ -12,7 +10,7 @@
 
 ---
 
-## Reactコンポーネントを埋め込めます
+# Reactコンポーネントも使える
 
 import Box from 'superbox'
 
@@ -21,6 +19,7 @@ import Box from 'superbox'
   color='white' bg='pink'>
   superbox
 </Box>
+
 ---
 
 # おしまい
