--- a/deck.mdx
+++ b/deck.mdx
@@ -230,7 +230,7 @@ export default Split
 
 export default LayoutAlignCenter
 
-## `Split`：横並びレイアウト
+## `Horizontal`：横並びレイアウト
 
 ```jsx
 import { Horizontal} from 'mdx-deck/layouts'
