縦方向にレスポンシブ対応

--- a/deck.mdx
+++ b/deck.mdx
@@ -16,7 +16,7 @@ import {
 
 
 <Head>
-  <title>mdx-deckとcode-surferでスライドを作ろう！</title>
+  <title>mdx-deckとcode-surferでスライドを作ろう！ #WEBエンジニア勉強会11</title>
 </Head>
 
 
@@ -26,6 +26,8 @@ import {
 </h1>
 
 <hr/>
+
+##### 2019/2/1　[WEBエンジニア勉強会 #11](https://web-engineer-meetup.connpass.com/event/115444/)
 
 ##### [@inouetakumon](https://twitter.com/inouetakumon):tomato:
 
@@ -252,7 +254,7 @@ export default Horizontal
 
 ![images/sample-background.jpg](./images/sample-background.jpg)
 
-![images/note-preview.png](./images/note-preview.png)
+![images/mdx-deck-background.png](./images/mdx-deck-background.png)
 
 ### どんどん横に並んでいく
 
@@ -266,7 +268,7 @@ export default Horizontal
 
 ![images/sample-background.jpg](./images/sample-background.jpg)
 
-![images/note-preview.png](./images/note-preview.png)
+![images/mdx-deck-background.png](./images/mdx-deck-background.png)
 
 ## どんどん横に並んでいく
 
@@ -451,7 +453,6 @@ export default LayoutMarkdown
 
 
 ---
-export default LayoutAlignCenter
 
 <CodeSurfer
   title={()=>(<h3>Code-Surferデモでできること</h3>)}
