--- a/deck.mdx
+++ b/deck.mdx
@@ -21,7 +21,7 @@ import {
 
 
 <h1>
-  <span>MDX-DECK</span><Sm>と</Sm><span>Code Surfer</span><Sm>で</Sm><br/>
+  <span>MDX-DECK</span><Sm>と</Sm><span>Code-Surfer</span><Sm>で</Sm><br/>
   <span>スライドを作ろう！</span>
 </h1>
 
