Qiitaアカウント追加

--- a/deck.mdx
+++ b/deck.mdx
@@ -43,11 +43,10 @@ export default LayoutAlignCenter
 
 <Avatar />
 
-* 名前：たくもん（[@inouetakumon](https://twitter.com/inouetakumon)）
+* 名前：たくもん([@inouetakumon](https://twitter.com/inouetakumon))
 * 仕事：SIer
 * 言語：Java、JavaScript
-* 趣味：ブログ（[https://takumon.com](https://takumon.com)）
-
+* 趣味：[ブログ](https://takumon.com)、[Qiita](https://qiita.com/Takumon)
 
 ---
 export default LayoutAlignCenter
